--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
             </div>
         </div>
         
-        <a href="https://apps.apple.com/app/your-app-id" class="download-btn">Download on App Store</a>
+        <a href="#" class="download-btn" style="cursor: default;">Coming Soon to the App Store</a>
         
         <div class="links">
             <a href="https://github.com/abdullaha6/pause-pray/blob/main/privacy-policy.md">Privacy Policy</a>
             <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms of Use</a>
-            <a href="mailto:your-email@example.com">Support</a>
+            <a href="mailto:abdullaha6@gmail.com">Support</a>
         </div>
     </div>
 </body>
