Added app icon to index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="icon">🕌</div>
+        <div class="icon">
+    <img src="assets/app-icon.png" alt="Pause & Pray App Icon" style="width: 100%; height: 100%; border-radius: 26px;">
+</div>
         
         <h1>Pause & Pray</h1>
         <p class="subtitle">Accurate prayer times for all 27 districts in Sri Lanka</p>
