--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
                 <p>Zero data collection</p>
             </div>
         </div>
-        
+
         <a href="#" class="download-btn" style="cursor: default;">Coming Soon to the App Store</a>
+<a href="wallpaper/" class="download-btn" style="margin-left: 12px;">Generate Wallpaper</a>
         
         <div class="links">
             <a href="https://github.com/abdullaha6/pause-pray/blob/main/privacy-policy.md">Privacy Policy</a>
